# kin-infer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/workflows/: acceleration-matrix.yml  ci.yml  registry-publish.yml  release.yml
.kin/: config.toml  manifest.json
.kin-release/: downstreams.json
.kin/kindb/: graph.kidx  graph.kndb
.kin/snapshot/: README.md  manifest.json
.kin/snapshot/src/: gpu.rs
examples/: det_probe.rs
scripts/: gpu-sweep.sh  publish-kinlab-crates.sh  registry-consumer-smoke.sh  run-tests.sh
src/: cuda_backend.rs  gpu.rs  lib.rs  macos_qos.rs  metal_backend.rs  resource.rs  watchdog.rs
tests/: attention_nan_masked_row.rs  bufferpool_stale_read_repro.rs  embed_batch_size_invariance_probe.rs  embed_batch_state_probe.rs  embed_batchsize_sweep.rs  embed_bucket_truth_probe.rs  embed_bucketing_probe.rs  embed_byte_determinism.rs  embed_determinism_probe.rs  embed_forward_determinism.rs  embed_layer_dump.rs  embed_long_seq_metal_parity.rs  embed_resident_stack_parity.rs  embed_scale_hang.rs  embed_smallbatch_pad_probe.rs  embed_speed_profile.rs  embed_stage_split.rs  metal_oom_error_path.rs  metal_seq_len_regression.rs  swerank_self_retrieval.rs  weight_cache_key_regression.rs
