# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Firelock, LLC

[package]
name = "kin-infer"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Troy Fortin <troy@firelock.ai>"]
description = "Universal transformer inference engine — pure Rust, GPU-accelerated (Metal, CUDA)"
repository = "https://github.com/firelock-ai/kin-infer"

[lib]
doctest = false

[features]
default = []
# GPU backends — zero external ML framework deps, custom shaders/kernels
# macOS: Apple Metal compute shaders (M1/M2/M3)
metal = ["dep:metal", "dep:objc2"]
# Linux/Windows: NVIDIA CUDA via driver API (no toolkit needed at build time)
cuda = []
# Platform-optimized BLAS for CPU fallback
# macOS: Apple Accelerate (AMX, NEON)
accelerate = ["ndarray/blas", "dep:blas-src-accelerate"]
# Windows/Linux: Intel MKL
mkl = ["ndarray/blas", "dep:blas-src-mkl"]
# Cross-platform fallback: OpenBLAS
openblas = ["ndarray/blas", "dep:blas-src-openblas"]

[dependencies]
ndarray = "0.16"
safetensors = "0.5"
half = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hashbrown = "0.15"
thiserror = "2"

# Metal GPU (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }
objc2 = { version = "0.5", optional = true }

[dependencies.blas-src-accelerate]
package = "blas-src"
version = "0.10"
features = ["accelerate"]
optional = true

[dependencies.blas-src-mkl]
package = "blas-src"
version = "0.10"
features = ["intel-mkl"]
optional = true

[dependencies.blas-src-openblas]
package = "blas-src"
version = "0.10"
features = ["openblas"]
optional = true
