# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Firelock, LLC

[package]
name = "kin-infer"
version = "0.2.6"
edition = "2021"
license = "Apache-2.0"
authors = ["Troy Fortin <troy@firelock.ai>"]
description = "Universal transformer inference engine — pure Rust, GPU-accelerated (Metal, CUDA)"
repository = "https://github.com/firelock-ai/kin-infer"

[lib]
doctest = false

[features]
default = []
# GPU backends — zero external ML framework deps, custom shaders/kernels
# macOS: Apple Metal compute shaders (M1/M2/M3)
metal = ["dep:metal", "dep:objc2", "dep:block"]
# Linux/Windows: NVIDIA CUDA via driver API (no toolkit needed at build time)
cuda = []
# CPU BLAS: Apple Accelerate (macOS) via the system framework — no build-time
# deps, raw cblas FFI (same posture as the CUDA driver-API backend). Linked and
# auto-selected at runtime when present; force the deterministic pure-Rust path
# with KIN_INFER_CPU_BACKEND=pure-rust for bit-reproducible runs.
accelerate = []

[dependencies]
ndarray = "0.16"
safetensors = "0.5"
half = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hashbrown = "0.15"
thiserror = "2"
parking_lot = "0.12"
rayon = "1"
tracing = "0.1"
memmap2 = "0.9"

# Unix-only: getppid() for the embed parent-death watchdog (orphan self-exit).
# Already present transitively (metal/objc2); named directly so the watchdog can
# poll for reparent-to-init without a platform shim.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Metal GPU (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }
objc2 = { version = "0.5", optional = true }
# Completion-handler block for bounded async command-buffer submission. metal
# 0.29's `add_completed_handler` takes a `block::Block`; name the type directly
# rather than relying on the transitive dep.
block = { version = "0.1", optional = true }

[dev-dependencies]
# Used only by the SweRank/nomic_bert self-retrieval probe to tokenize text
# and parse the model config.json.
tokenizers = "0.20.4"
serde_json = "1"
